--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 body,html{
-  /* padding: 0;
-  margin: 0; */
+  font-family: 'Poppins', sans-serif;
   text-align: left;
 }
 .row-header{
-  /* background-color: #100027; */
-  /* color: floralwhite; */
   min-height: 300px;
   margin: 0 auto;
   padding: 40px 0 40px 0;
 }
+.alert{
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px
+}
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
 
-/* .secondary-btn{
-  background-color: none;
-  color:#5001c0;
-  border: 2px solid #ffc107;
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
-.secondary-btn:hover{
-  background-color: #ffc107;
-  color: black;
-  transition-duration: .5s;
-}
-.primary-btn{
-  background-color: #ffc107;
-  color:black;
-  border: 2px solid #ffc107;
-}
-.primary-btn:hover{
-  background-color: #c99700;
-  color: black;
-  transition-duration: .5s;
-} */
+
